--- a/index.css
+++ b/index.css
@@ -14,7 +14,6 @@ html, body {
 .grid div {
     width: 15px;
     height: 15px;
-    background-color:blue;
 }
 
 .pac-dot {
@@ -27,12 +26,38 @@ html, body {
     background-color: blue;
 }
 
-.power-pallet {
+.power-pellet {
     background: green;
     border-radius: 7.5px;
 }
 
 .pacman {
-    background-color: yellow;
+    background-color: orange;
     border-radius: 7.5px;
+    border: none'
 } 
+
+.blinky {
+    background-color: red;
+    border:none;
+}
+
+.pinky {
+    background-color: pink;
+    border: none;
+}
+
+.inky {
+    background-color: aqua;
+    border: none;
+}
+
+.clyde {
+    background-color: orange;
+    border: none;
+}
+
+.scared-ghost {
+    background-color: aquamarine;
+    border: none;
+}
